run on IE and Edge

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
             href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;display=swap"
             rel="stylesheet"
         />
+        <script src="https://polyfill.io/v3/polyfill.min.js?flags=gated&features=Promise%2Cfetch"></script>
+
         <link href="./index.scss" rel="stylesheet" />
     </head>
     <body>
