drop any attempts to support API. Style chat

--- a/index.html
+++ b/index.html
@@ -6,19 +6,15 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>Telegram Web</title>
         <link
-            rel="shortcut icon"
-            type="image/x-icon"
-            href="./src/assets/favicon.ico"
-        />
-        <link
             href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;display=swap"
             rel="stylesheet"
         />
-
+        <link href="./src/assets/favicon.ico" rel="shortcut icon" />
         <script src="https://polyfill.io/v3/polyfill.min.js?flags=gated&features=Promise%2Cfetch"></script>
     </head>
     <body>
         <div id="app"></div>
         <div id="popup"></div>
+        <script src="./src/router.js"></script>
     </body>
 </html>
